--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "build:lite-win": "set VERSION=v1.3.0&&set PRODUCT_TYPE=lite&&vue-cli-service build --no-clean"
   },
   "dependencies": {
+    "@atlaskit/comment": "^10.0.4",
     "firebase-functions": "^3.7.0",
     "mermaid": "^8.5.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "split.js": "^1.6.0",
     "stein-js-client": "^0.0.2",
+    "styled-components": "^5.2.0",
     "vue": "^2.6.11",
     "vue-atlas": "^2.1.8",
     "vue-codemirror": "^4.0.6",
