--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-atlas": "^2.1.8",
     "vue-codemirror": "^4.0.6",
     "vue-sequence": "^1.0.21",
+    "vuera": "^0.2.7",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
