Use Atlaskit Editor for adding comments.

--- a/package.json
+++ b/package.json
@@ -19,14 +19,20 @@
   },
   "dependencies": {
     "@atlaskit/comment": "^10.0.4",
+    "@atlaskit/editor-core": "^131.0.7",
+    "@atlaskit/media-core": "^32.1.1",
+    "@atlaskit/smart-card": "^14.4.3",
     "@atlaskit/textarea": "^3.0.4",
     "firebase-functions": "^3.7.0",
     "mermaid": "^8.5.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
+    "react-intl": "2.6.0",
+    "rxjs": "6",
+    "rxjs-compat": "6",
     "split.js": "^1.6.0",
     "stein-js-client": "^0.0.2",
-    "styled-components": "^5.2.0",
+    "styled-components": "3.4.10",
     "vue": "^2.6.11",
     "vue-atlas": "^2.1.8",
     "vue-codemirror": "^4.0.6",
