--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vue-codemirror": "^4.0.6",
     "vue-sequence": "^1.0.21",
     "vuera": "^0.2.7",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "zenuml-graph-commenter-react": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
